增加帮助页面，信息显示，新手指引，修改日期显示，价格显示bug

--- a/code/app/andriod/Laundry/res/layout/main_welcome.xml
+++ b/code/app/andriod/Laundry/res/layout/main_welcome.xml
@@ -2,7 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/start_image"
+    android:background="#026688"
     android:orientation="vertical" >
-
+    <ImageView
+        android:id="@+id/misp_grid_item_img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/start_image"
+        android:scaleType="fitCenter"
+ 
+        android:gravity="center" />
 </LinearLayout>
