--- a/code/app/andriod/Laundry/res/layout/user_info_edit.xml
+++ b/code/app/andriod/Laundry/res/layout/user_info_edit.xml
@@ -205,7 +205,7 @@ android:focusableInTouchMode="true"
                     android:background="@drawable/edittext_sel"
                     android:ems="10"
                     android:gravity="center_vertical"
-                    android:hint="(选填项)"
+                    android:hint="您可以通过LBS获取地址或手动填写地址!"
                     android:lines="2"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
