--- a/code/app/andriod/Laundry/res/layout/misp_image_display.xml
+++ b/code/app/andriod/Laundry/res/layout/misp_image_display.xml
@@ -23,15 +23,38 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
-            <ImageView
-                android:id="@+id/misp_common_image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-              />
-            
+            android:orientation="vertical" 
+            android:background="#026688">
+ 
+            <RelativeLayout    
+                   
+				        android:layout_width="fill_parent"    
+				        android:layout_height="wrap_content"   
+				        android:orientation="vertical"
+				        android:layout_margin="20dp" >    
+            <android.support.v4.view.ViewPager  
+			        android:id="@+id/home_ad_image"  
+			        android:layout_width="match_parent"  
+			        android:layout_height="wrap_content"  
+			        android:layout_gravity="center"
+			      
+			       android:background="#026688"
+			     
+                      android:persistentDrawingCache="animation" >  
+			    </android.support.v4.view.ViewPager>  
+                
+				        <LinearLayout
+				            android:id="@+id/home_ad_image_group"
+				            android:layout_width="fill_parent"
+				            android:layout_height="wrap_content"
+				            android:layout_alignParentBottom="true"
+				            android:layout_centerHorizontal="true"
+				            android:layout_marginBottom="100dp"
+ 				            android:gravity="center"
+				            android:orientation="horizontal" >
+    
+				        </LinearLayout>    
+				    </RelativeLayout>
         </LinearLayout>
     </ScrollView>
 
