--- a/code/app/andriod/Laundry/res/layout/misp_list_item_texttype.xml
+++ b/code/app/andriod/Laundry/res/layout/misp_list_item_texttype.xml
@@ -5,65 +5,64 @@
     android:background="@color/backcolor"
     android:orientation="vertical" >
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
         android:background="@color/white"
-        android:gravity="center" >
+        android:layout_height="wrap_content" >
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+        <RelativeLayout
+            android:id="@+id/misp_icon_img_view"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginLeft="10dp"
+            android:visibility="gone" >
 
-            <RelativeLayout
-                android:id="@+id/misp_icon_img_view"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
-                android:visibility="gone" >
-
-                <ImageView
-                    android:id="@+id/misp_icon_img"
-                    style="@style/AppBaseTheme"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_centerInParent="true"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitXY"
-                    android:visibility="visible" />
-
-            </RelativeLayout>
-
-            <TextView
-                android:id="@+id/item_texttype_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginRight="20dp"
-                android:gravity="center"
-                android:paddingBottom="10dp"
-                android:paddingLeft="20dp"
-                android:paddingTop="10dp"
-                android:textColor="@color/content_text_color"
-                android:textColorHint="@android:color/black"
-                android:textSize="14sp" />
-
-        </LinearLayout>
+            <ImageView
+                android:id="@+id/misp_icon_img"
+                style="@style/AppBaseTheme"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_centerInParent="true"
+                android:adjustViewBounds="true"
+                android:scaleType="fitXY"
+                android:visibility="visible" />
+        </RelativeLayout>
 
         <TextView
-            android:id="@+id/item_texttype_text"
+            android:id="@+id/item_texttype_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
+            android:layout_gravity="center"
             android:layout_marginRight="20dp"
+            android:gravity="center"
+            android:paddingBottom="10dp"
+            android:paddingLeft="20dp"
+            android:paddingTop="10dp"
             android:text=""
             android:textColor="@color/content_text_color"
-            android:textColorHint="@android:color/black" >
-            
-        </TextView>
- 
-    </RelativeLayout>
+            android:textColorHint="@android:color/black"
+            android:textSize="14sp" />
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" >
+
+            <TextView
+                android:id="@+id/item_texttype_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerHorizontal="false"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="20dp"
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp"
+                android:text=""
+                android:textColor="@color/content_text_color"
+                android:textColorHint="@android:color/black" />
+        </RelativeLayout>
+    </LinearLayout>
 
 
 
