--- a/code/app/andriod/Laundry/res/values/styles.xml
+++ b/code/app/andriod/Laundry/res/values/styles.xml
@@ -29,6 +29,18 @@
         <item name="android:textColor">@drawable/nav_text_color</item>  
  
     </style> 
-
+  
+    
+   
+ 
+    
+    
+   <style name="MispWaitDailog" parent="@android:Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowNoTitle">true</item> 
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
 
 </resources>
