--- a/code/app/andriod/Laundry/res/layout/main_welcome.xml
+++ b/code/app/andriod/Laundry/res/layout/main_welcome.xml
@@ -5,11 +5,71 @@
     android:background="#026688"
     android:orientation="vertical" >
     <ImageView
-        android:id="@+id/misp_grid_item_img"
+        android:id="@+id/welcome_start_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/start_image"
         android:scaleType="fitCenter"
- 
+
         android:gravity="center" />
+    
+       <LinearLayout
+            android:id="@+id/welcome_help_layout"  
+           
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" 
+            android:background="#026688"
+             android:visibility="gone"
+            >
+ 
+            <RelativeLayout    
+                   
+				        android:layout_width="fill_parent"    
+				        android:layout_height="wrap_content"   
+				        android:orientation="vertical"
+				        android:layout_margin="20dp" >    
+              <android.support.v4.view.ViewPager  
+			        android:id="@+id/home_ad_image"  
+			        android:layout_width="match_parent"  
+			        android:layout_height="wrap_content"  
+			        android:layout_gravity="center"
+			      
+			       android:background="#026688"
+			     
+                      android:persistentDrawingCache="animation" >  
+			    </android.support.v4.view.ViewPager>
+				        <LinearLayout
+				            android:id="@+id/home_ad_image_group"
+				            android:layout_width="fill_parent"
+				            android:layout_height="wrap_content"
+				            android:layout_alignParentBottom="true"
+				            android:layout_centerHorizontal="true"
+				            android:layout_marginBottom="100dp"
+ 				            android:gravity="center"
+				            android:orientation="horizontal" >
+    
+				        </LinearLayout>    
+
+				          <LinearLayout
+				              android:layout_width="wrap_content"
+				              android:layout_height="wrap_content"
+				              android:layout_alignParentBottom="true"
+				              android:layout_alignParentRight="true"
+ 				              android:orientation="horizontal" >
+				            
+							        <Button
+							            android:id="@+id/welcome_go_home"
+							            android:layout_width="fill_parent"
+							            android:layout_height="wrap_content"
+							            android:padding="10dp"
+							            android:background="@null"
+							             android:textSize="18dp"
+ 							            android:text="立即体验"
+ 							            android:textColor="@color/disablcolor"
+							             />
+    
+				        </LinearLayout>   
+				    </RelativeLayout>
+        </LinearLayout>
 </LinearLayout>
