--- a/code/app/andriod/Laundry/res/layout/user_info_edit.xml
+++ b/code/app/andriod/Laundry/res/layout/user_info_edit.xml
@@ -229,7 +229,7 @@ android:focusableInTouchMode="true"
                         android:layout_marginRight="1dp"
                         android:layout_weight="1"
                         android:background="@color/blue_light"
-                        android:drawableRight="@drawable/icon_gps"
+                        android:drawableLeft="@drawable/icon_gps"
                         android:padding="5dp"
                         android:text="定位"
                         android:textColor="@color/white"
